Initial commit of fully working project barebones.  Python sdist packaging works, sphinx works, pbr with version number and authors and changelog works

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,17 +1,17 @@
 [metadata]
 name = boardgame_framework
 author = RabidCicada
-author-email = RabidCicada+bg_framework@gmail.com
-summary = A BoardGame Framework for creating and running re-usable boardgame modules
-description-file = README.rst
-description-content-type = text/x-rst; charset=UTF-8
-home-page = http://github.com/RabidCicada/boardgame_framework
+author_email = RabidCicada+bg_framework@gmail.com
+description = A BoardGame Framework for creating and running re-usable boardgame modules
+long_description = file:README.rst
+long_description_content_type = text/x-rst; charset=UTF-8
+url = http://github.com/RabidCicada/boardgame_framework
 project_urls =
 #    Bug Tracker = https://bugs.launchpad.net/pbr/
     Documentation = https://docs.openstack.org/pbr/
     Source Code = http://github.com/RabidCicada/boardgame_framework
 license = Apache-2
-classifier =
+classifiers =
     Development Status :: 2 - Pre-Alpha
     Environment :: Console
     Intended Audience :: Developers
@@ -23,13 +23,14 @@ keywords =
     setup
     distutils
 
-[files]
-packages_root = src
-packages =
-    boardgame_framework
+#Using the pbr [files] entry doesn't work for sdist packaging
+#[files]
+#packages_root =  src/
+#packages =
+#    boardgame_framework
 
-[entry_points]
-# console_scripts =
-#    pbr = pbr.cmd:main
-# pbr.config.drivers =
-#    plain = pbr.cfg.driver:Plain
+[options]
+zip_safe = True
+package_dir =
+  '' = src/
+packages = boardgame_framework
