Beginning map implementation

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,4 +33,11 @@ keywords =
 zip_safe = True
 package_dir =
   '' = src/
-packages = boardgame_framework
+packages =
+  boardgame_framework
+
+[pytest]
+testpaths =  tests
+
+[aliases]
+test=pytest
