Testing prep and config.

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,8 +36,10 @@ package_dir =
 packages =
   boardgame_framework
 
-[pytest]
-testpaths =  tests
+[tool:pytest]
+testpaths =
+  tests
+#  src/boardgame_framework
 
 [aliases]
 test=pytest
