Major update including generic xforms framework for auto_cells.  Used framework to implement cell filtering based on a visual array of cells where some are blacklisted, allowing for simple 'board-based' blocking out

--- a/tests/data_files/level1_auto_map.yml
+++ b/tests/data_files/level1_auto_map.yml
@@ -10,15 +10,15 @@
         dimensions:
           x: 8
           y: 6
-        filter:
-          type: "rect"
-          flat_pattern:
-            - [ 1,0,0,0,0,0,0,0 ]
-            -  [ 0,0,0,0,0,0,0,0 ]
-            - [ 1,0,0,0,0,0,0,0 ]
-            -  [ 0,0,0,0,0,0,0,0 ]
-            - [ 1,0,0,0,0,0,0,0 ]
-            -  [ 0,0,0,0,0,0,0,0 ]
+        xform:
+          - type: "oddr_flat_filter"
+            data:
+              - [ 1,0,0,0,0,0,0,0 ]
+              -  [ 0,0,0,0,0,0,0,0 ]
+              - [ 1,0,0,0,0,0,0,0 ]
+              -  [ 0,0,0,0,0,0,0,0 ]
+              - [ 1,0,0,0,0,0,0,0 ]
+              -  [ 0,0,0,0,0,0,0,0 ]
         auto_connect: yes
     - name: "second_room"
       auto_cells:
@@ -27,15 +27,15 @@
         dimensions:
           x: 7
           y: 6
-        filter:
-          type: "rect"
-          flat_pattern:
-            - [ 0,0,0,0,0,0,0 ]
-            -  [ 0,0,0,0,0,0,0,0 ]
-            - [ 1,0,0,0,0,0,0,0 ]
-            -  [ 0,0,0,0,0,0,0,0 ]
-            - [ 1,0,0,0,0,0,0,0 ]
-            -  [ 0,0,0,0,0,0,0,0 ]
+        xform:
+          - type: "evenr_flat_filter"
+            data:
+              -   [ 0,0,0,0,0,0,0 ]
+              -  [ 0,0,0,0,0,0,0,0 ]
+              -   [ 1,0,0,0,0,0,0,0 ]
+              -  [ 0,0,0,0,0,0,0,0 ]
+              -   [ 1,0,0,0,0,0,0,0 ]
+              -  [ 0,0,0,0,0,0,0,0 ]
     - name: "third_room"
       auto_cells:
         cell_type: "hex"
@@ -44,14 +44,14 @@
           x: 5
           y: 5
           z: 5
-        filter:
-          type: "cubed"
-          flat_pattern:
-            -   [ 0,0,0,0 ]
-            -  [ 0,0,0,0,0 ]
-            - [ 1,0,0,0,0,1 ]
-            -  [ 0,0,0,0,0 ]
-            -   [ 1,0,0,0 ]
+        xform:
+          # - type: "hex_flat_filter"
+          #   data:
+          #     -   [ 0,0,0,0,0 ]
+          #     -  [ 0,0,0,0,0,0 ]
+          #     - [ 1,0,0,0,0,0,1 ]
+          #     -  [ 0,0,0,0,0,0 ]
+          #     -   [ 1,0,0,0,0 ]
     - name: "fourth_room"
       auto_cells:
         cell_type: "square"
@@ -59,11 +59,11 @@
         dimensions:
           x: 7
           y: 5
-        filter:
-          type: "offset"
-          flat_pattern:
-            - [ 0,0,0,0,0,0,1 ]
-            - [ 0,0,0,0,0,0,1 ]
-            - [ 0,0,0,0,0,0,1 ]
-            - [ 0,0,0,0,0,0,1 ]
-            - [ 0,0,0,0,0,0,1 ]
+        xform:
+          - type: "square_flat_filter"
+            data:
+              - [ 0,0,0,0,0,0,1 ]
+              - [ 0,0,0,0,0,0,0 ]
+              - [ 0,0,0,0,0,0,1 ]
+              - [ 0,0,0,0,0,0,1 ]
+              - [ 0,0,0,0,0,0,1 ]
