--- a/tests/data_files/gloomhaven/A1a.yml
+++ b/tests/data_files/gloomhaven/A1a.yml
@@ -1,16 +1,16 @@
 ---
   cells:
-    - name: "G1b"
+    - name: "A1a"
       auto_cells:
-        name: "CHILD~G1b"
+        name: "CHILD~A1a"
         cell_type: "hex"
         dimensions:
           system: "oddr"
-          dims: [8,3]
+          dims: [5,2]
         xform:
           - type: "oddr_flat_filter"
             data:
-              - [ 0,0,0,0,0,0,0,0 ]
-              -  [ 0,0,0,0,0,0,0,1 ]
-              - [ 0,0,0,0,0,0,0,0 ]
+             # - [ 1,0,0,0,1 ]
+              -  [ 0,0,0,0,1 ]
+              - [ 0,0,0,0,0 ]
           - type: "auto_connect"
