--- a/tests/data_files/gloomhaven/A4b.yml
+++ b/tests/data_files/gloomhaven/A4b.yml
@@ -1,16 +1,15 @@
 ---
   cells:
-    - name: "G1b"
+    - name: "A4b"
       auto_cells:
-        name: "CHILD~G1b"
+        name: "CHILD~A4b"
         cell_type: "hex"
         dimensions:
           system: "oddr"
-          dims: [8,3]
+          dims: [5,2]
         xform:
           - type: "oddr_flat_filter"
             data:
-              - [ 0,0,0,0,0,0,0,0 ]
-              -  [ 0,0,0,0,0,0,0,1 ]
-              - [ 0,0,0,0,0,0,0,0 ]
+              -  [ 0,0,0,0,1 ]
+              - [ 0,0,0,0,0 ]
           - type: "auto_connect"
