Got vector transforms working properly...though algorithmically poorly

--- a/tests/data_files/gloomhaven/gloomhaven_scenario2.yml
+++ b/tests/data_files/gloomhaven/gloomhaven_scenario2.yml
@@ -43,9 +43,15 @@
         -
           - ["M1a-A3b-Door",[0,0],3]
           - ["A3b",[0,1],0]
-        # -
-        #   - ["M1a",[4,5],2]
-        #   - ["M1a-A2a-Door",[0,0],5]
-        # -
-        #   - ["M1a-A3b-Door",[0,0],3]
-        #   - ["A2a",[0,1],2]
+        -
+          - ["M1a",[4,5],2]
+          - ["M1a-A2a-Door",[0,0],5]
+        -
+          - ["M1a-A2a-Door",[0,0],3]
+          - ["A2a",[0,1],2]
+        -
+          - ["M1a",[0,5],1]
+          - ["M1a-A4b-Door",[0,0],4]
+        -
+          - ["M1a-A4b-Door",[0,0],0]
+          - ["A4b",[3,1],1]
