Initial attempt at replumb of build tools etc

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,18 +23,15 @@ keywords =
     setup
     distutils
 
-#Using the pbr [files] entry doesn't work for sdist packaging
-#[files]
-#packages_root =  src/
-#packages =
-#    boardgame_framework
-
 [options]
 zip_safe = True
 package_dir =
-  '' = src/
+  = src
 packages =
   boardgame_framework
+install_requires =
+  unidecode
+  argparse
 
 [tool:pytest]
 testpaths =
