--- a/setup.cfg
+++ b/setup.cfg
@@ -27,11 +27,20 @@ keywords =
 zip_safe = True
 package_dir =
   = src
-packages =
-  boardgame_framework
+packages = find:
 install_requires =
-  unidecode
+  ruamel.yaml
+  pygame
   argparse
+
+[options.packages.find]
+where=src
+
+[options.package_data]
+* = 
+    *.png
+    *.json
+
 
 [tool:pytest]
 testpaths =
